<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/label_section"
        tools:text="@string/important"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/task_item" />

    <LinearLayout
        android:id="@+id/empty"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            style="@style/desc_item_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/empty_task" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:alpha="0.5"
            android:layout_weight="0"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/move"
            app:srcCompat="@drawable/ic_add"
            app:tint="?colorOnPrimary"
            android:background="@drawable/rounded_add"  />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_finish"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            style="@style/desc_item_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="left"
            android:text="@string/empty_task_finish" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/empty_task_finish"
            app:srcCompat="@drawable/ic_filter_list_off"
            app:tint="?colorPrimary"  />

    </LinearLayout>

</LinearLayout>